# GeometryProcessing

./: CMakeLists.txt  README.md
src/assignment00/: CMakeLists.txt  main.cc
src/assignment01/: CMakeLists.txt  ReadMe.txt  main.cc  task.cc  task.hh
src/assignment02/: CMakeLists.txt  ReadMe.txt  main.cc  task.cc  task.hh
src/assignment02/data/: sphere.off  tetra_thing.off
src/assignment03/: CMakeLists.txt  Members.txt  ReadMe.txt  main.cc  task.cc  task.hh
src/assignment03/data/: blend.off  fandisk_noise.off
src/assignment04/: CMakeLists.txt  Members.txt  QuadricT.hh  ReadMe.txt  main.cc  task.cc  task.hh
src/assignment05/: CMakeLists.txt  Members.txt  ReadMe.txt  main.cc  task.cc  task.hh
src/assignment05/data/: Circle.off  bunny_open.off  hemisphere.off
